--- a/musket_docs/readthedocs_mod/css/theme_extra.css
+++ b/musket_docs/readthedocs_mod/css/theme_extra.css
@@ -108,7 +108,7 @@ form .search-query {
 
 /*
  * Account for wide tables which go off the side.
- * Override borders to avoid weirdness on narrow tables.
+ * Override borders to avoid wierdness on narrow tables.
  *
  * https://github.com/mkdocs/mkdocs/issues/834
  * https://github.com/mkdocs/mkdocs/pull/1034
@@ -124,24 +124,3 @@ td, th {
    border: 1px solid #e1e4e5 !important; /* csslint allow: important */
    border-collapse: collapse;
 }
-
-/*Keras extras*/
-
-.keras-logo {
-    max-height: 55px;
-    width: 100%;
-    background: #d00000;
-    font-size: 140%;
-    color: white;
-    font-family: "Source Sans Pro", "ff-tisa-web-pro", "Georgia", Arial, sans-serif;
-}
-
-.keras-logo-img {
-    max-width: 45px;
-    margin: 10px;
-}
-
-h1, h2, h3, h4, h5, h6, legend {
-    font-family: "Source Sans Pro", "ff-tisa-web-pro", "Georgia", Arial, sans-serif;,
-}
-
